# full-project-backend

./: REAME.md  pyproject.toml
dotenv_files/: .env-example
skills/: settings.py
