[tool.poetry]
name = "django-docker"
version = "0.1.0"
description = "skills test"
authors = ["Ismael"]
readme = "README.md"
packages = [{include = "django_docker"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
